<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_custom_dialog"
    android:padding="22dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/text_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_mobile_dev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/random_msg"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@id/text_welcome"
            app:layout_constraintStart_toStartOf="@id/text_welcome"
            app:layout_constraintTop_toBottomOf="@+id/text_welcome" />

        <EditText
            android:id="@+id/edit_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_edit_text"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_mobile_dev" />

        <EditText
            android:id="@+id/edit_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_edit_text"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="8dp"
            app:layout_constraintStart_toStartOf="@+id/edit_email"
            app:layout_constraintTop_toBottomOf="@id/edit_email" />

        <Button
            android:id="@+id/button_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_button"
            android:text="@string/login"
            app:backgroundTint="@null"
            app:layout_constraintEnd_toEndOf="@+id/edit_password"
            app:layout_constraintStart_toStartOf="@+id/edit_password"
            app:layout_constraintTop_toBottomOf="@+id/edit_password" />

        <TextView
            android:id="@+id/text_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/forgot_password"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@id/button_login"
            app:layout_constraintStart_toStartOf="@+id/button_login"
            app:layout_constraintTop_toBottomOf="@id/button_login"
            android:layout_marginBottom="10dp"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>